working versions of `fit` for formulas and recipes

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -22,5 +22,7 @@ importFrom(rlang,ll)
 importFrom(rlang,missing_arg)
 importFrom(rlang,na_lgl)
 importFrom(rlang,quos)
+importFrom(stats,as.formula)
+importFrom(stats,model.frame)
 importFrom(utils,capture.output)
 importFrom(utils,installed.packages)
