`fit` recipe interfaces plus some documentation

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,6 +10,10 @@ export(fit)
 export(rand_forest)
 export(varying)
 importFrom(purrr,map_lgl)
+importFrom(recipes,all_outcomes)
+importFrom(recipes,all_predictors)
+importFrom(recipes,juice)
+importFrom(recipes,prep)
 importFrom(rlang,enquo)
 importFrom(rlang,eval_tidy)
 importFrom(rlang,expr)
@@ -24,5 +28,5 @@ importFrom(rlang,na_lgl)
 importFrom(rlang,quos)
 importFrom(stats,as.formula)
 importFrom(stats,model.frame)
-importFrom(utils,capture.output)
+importFrom(stats,model.response)
 importFrom(utils,installed.packages)
