added verbosity and error trapping to `fit` via a control object

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -34,4 +34,6 @@ importFrom(rlang,quos)
 importFrom(stats,as.formula)
 importFrom(stats,model.frame)
 importFrom(stats,model.response)
+importFrom(stats,terms)
+importFrom(utils,capture.output)
 importFrom(utils,installed.packages)
