error catching tunred off by defualt; also fixed environments for evaluation

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -22,6 +22,7 @@ importFrom(recipes,prep)
 importFrom(rlang,enquo)
 importFrom(rlang,eval_tidy)
 importFrom(rlang,expr)
+importFrom(rlang,get_env)
 importFrom(rlang,is_empty)
 importFrom(rlang,is_missing)
 importFrom(rlang,is_null)
