added an example classification data set

--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -12,6 +12,9 @@ reference:
     contents:
       - rand_forest
       - logistic_reg 
+  - title: Data
+    contents:
+     - lending_club      
 
 navbar:
   left:
