--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -11,6 +11,8 @@ Encoding: UTF-8
 LazyData: true
 ByteCompile: true
 VignetteBuilder: knitr
+Depends:
+    R (>= 2.10)
 Imports: 
     rlang (>= 0.1.6.9003),
     purrr,
