moved to evaluating all arguments; added spark code; import all rlang

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,25 +11,12 @@ export(fit)
 export(logistic_reg)
 export(rand_forest)
 export(varying)
+import(rlang)
 importFrom(purrr,map_lgl)
 importFrom(recipes,all_outcomes)
 importFrom(recipes,all_predictors)
 importFrom(recipes,juice)
 importFrom(recipes,prep)
-importFrom(rlang,enexprs)
-importFrom(rlang,enquo)
-importFrom(rlang,eval_tidy)
-importFrom(rlang,expr)
-importFrom(rlang,get_env)
-importFrom(rlang,get_expr)
-importFrom(rlang,is_empty)
-importFrom(rlang,is_missing)
-importFrom(rlang,is_null)
-importFrom(rlang,is_quosure)
-importFrom(rlang,lgl)
-importFrom(rlang,ll)
-importFrom(rlang,missing_arg)
-importFrom(rlang,quos)
 importFrom(stats,as.formula)
 importFrom(stats,binomial)
 importFrom(stats,model.frame)
