better updating of arguments

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,6 +12,7 @@ export(logistic_reg)
 export(rand_forest)
 export(varying)
 import(rlang)
+importFrom(purrr,list_modify)
 importFrom(purrr,map_lgl)
 importFrom(recipes,all_outcomes)
 importFrom(recipes,all_predictors)
