unprotexted family for glm and stan_glm

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ S3method(fit,model_spec)
 S3method(print,logistic_reg)
 S3method(print,rand_forest)
 S3method(translate,default)
+S3method(translate,logistic_reg)
 S3method(translate,rand_forest)
 S3method(update,logistic_reg)
 S3method(update,rand_forest)
