--- a/NAMESPACE
+++ b/NAMESPACE
@@ -27,4 +27,5 @@ importFrom(stats,model.response)
 importFrom(stats,terms)
 importFrom(utils,capture.output)
 importFrom(utils,getFromNamespace)
+importFrom(utils,globalVariables)
 importFrom(utils,installed.packages)
