added a proper control function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,7 @@ S3method(translate,rand_forest)
 S3method(update,logistic_reg)
 S3method(update,rand_forest)
 export(fit)
+export(fit_control)
 export(logistic_reg)
 export(rand_forest)
 export(translate)
