--- a/NAMESPACE
+++ b/NAMESPACE
@@ -26,6 +26,7 @@ importFrom(recipes,juice)
 importFrom(recipes,prep)
 importFrom(stats,as.formula)
 importFrom(stats,model.frame)
+importFrom(stats,model.matrix)
 importFrom(stats,model.response)
 importFrom(stats,terms)
 importFrom(utils,capture.output)
