--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,5 +1,5 @@
 Package: parsnip
-Version: 0.0.0.9000
+Version: 0.0.0.9001
 Title: A Common API to Modeling and analysis Functions
 Description: A common interface is provided to allow users to specify a model without having to remember the different argument names across different functions or computational engines (e.g. R, spark, stan, etc). 
 Authors@R: c(
@@ -24,7 +24,8 @@ RoxygenNote: 6.0.1
 Suggests: 
     testthat,
     knitr,
-    rmarkdown
+    rmarkdown,
+    survival
 Remotes:
     tidyverse/rlang
 
