--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,16 +4,20 @@ S3method(fit,model_spec)
 S3method(print,linear_reg)
 S3method(print,logistic_reg)
 S3method(print,rand_forest)
+S3method(print,surv_reg)
 S3method(translate,default)
 S3method(translate,rand_forest)
+S3method(translate,surv_reg)
 S3method(update,linear_reg)
 S3method(update,logistic_reg)
 S3method(update,rand_forest)
+S3method(update,surv_reg)
 export(fit)
 export(fit_control)
 export(linear_reg)
 export(logistic_reg)
 export(rand_forest)
+export(surv_reg)
 export(translate)
 export(varying)
 import(rlang)
@@ -25,6 +29,7 @@ importFrom(recipes,all_predictors)
 importFrom(recipes,juice)
 importFrom(recipes,prep)
 importFrom(stats,as.formula)
+importFrom(stats,formula)
 importFrom(stats,model.frame)
 importFrom(stats,model.matrix)
 importFrom(stats,model.response)
