added simple neural networks

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,20 +3,25 @@
 S3method(fit,model_spec)
 S3method(print,linear_reg)
 S3method(print,logistic_reg)
+S3method(print,mlp)
 S3method(print,model_fit)
 S3method(print,rand_forest)
 S3method(print,surv_reg)
 S3method(translate,default)
+S3method(translate,mlp)
 S3method(translate,rand_forest)
 S3method(translate,surv_reg)
 S3method(update,linear_reg)
 S3method(update,logistic_reg)
+S3method(update,mlp)
 S3method(update,rand_forest)
 S3method(update,surv_reg)
 export(fit)
 export(fit_control)
+export(keras_mlp)
 export(linear_reg)
 export(logistic_reg)
+export(mlp)
 export(rand_forest)
 export(surv_reg)
 export(translate)
