--- a/.Rbuildignore
+++ b/.Rbuildignore
@@ -3,3 +3,9 @@
 ^pkgdown$
 ^parsnip\.Rproj$
 ^\.Rproj\.user$
+tests\testthat\test_linear_reg_glmnet.R
+tests\testthat\test_linear_reg_stan.R
+tests\testthat\test_logistic_reg_glmnet.R
+tests\testthat\test_logistic_reg_stan.R
+tests\testthat\test_rand_forest.R
+tests\testthat\test_surv_reg.R
