--- a/.Rbuildignore
+++ b/.Rbuildignore
@@ -7,6 +7,7 @@ tests\testthat\test_linear_reg_glmnet.R
 tests\testthat\test_linear_reg_stan.R
 tests\testthat\test_logistic_reg_glmnet.R
 tests\testthat\test_logistic_reg_stan.R
-tests\testthat\test_rand_forest.R
+tests\testthat\test_rand_forest_ranger.R
+tests\testthat\test_rand_forest_randomForest.R
 tests\testthat\test_surv_reg.R
 tests\testthat\test_mlp_reg.R
