class prob predictions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,7 @@
 S3method(fit,model_spec)
 S3method(predict,model_fit)
 S3method(predict_class,model_fit)
+S3method(predict_classprob,model_fit)
 S3method(print,linear_reg)
 S3method(print,logistic_reg)
 S3method(print,mlp)
@@ -27,6 +28,8 @@ export(mlp)
 export(predict.model_fit)
 export(predict_class)
 export(predict_class.model_fit)
+export(predict_classprob)
+export(predict_classprob.model_fit)
 export(rand_forest)
 export(surv_reg)
 export(translate)
@@ -47,6 +50,8 @@ importFrom(stats,model.weights)
 importFrom(stats,na.omit)
 importFrom(stats,na.pass)
 importFrom(stats,terms)
+importFrom(tibble,as_tibble)
+importFrom(tibble,is_tibble)
 importFrom(utils,capture.output)
 importFrom(utils,getFromNamespace)
 importFrom(utils,installed.packages)
