--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -17,7 +17,8 @@ Imports:
     dplyr,
     rlang (>= 0.2.0.9001),
     purrr,
-    utils
+    utils,
+    tibble
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 6.0.1
 Suggests: 
