logistic regression class probs

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -52,6 +52,7 @@ importFrom(stats,na.pass)
 importFrom(stats,terms)
 importFrom(tibble,as_tibble)
 importFrom(tibble,is_tibble)
+importFrom(tibble,tibble)
 importFrom(utils,capture.output)
 importFrom(utils,getFromNamespace)
 importFrom(utils,installed.packages)
