fixed removals of model-specific test code

--- a/.Rbuildignore
+++ b/.Rbuildignore
@@ -3,11 +3,12 @@
 ^pkgdown$
 ^parsnip\.Rproj$
 ^\.Rproj\.user$
-tests\testthat\test_linear_reg_glmnet.R
-tests\testthat\test_linear_reg_stan.R
-tests\testthat\test_logistic_reg_glmnet.R
-tests\testthat\test_logistic_reg_stan.R
-tests\testthat\test_rand_forest_ranger.R
-tests\testthat\test_rand_forest_randomForest.R
-tests\testthat\test_surv_reg.R
-tests\testthat\test_mlp_reg.R
+test_linear_reg_glmnet
+test_linear_reg_stan
+test_logistic_reg_glmnet
+test_logistic_reg_stan
+test_rand_forest_ranger
+test_rand_forest_randomForest
+test_surv_reg
+test_mlp_keras
+test_mlp_nnet
