--- a/docs/pkgdown.yml
+++ b/docs/pkgdown.yml
@@ -2,5 +2,6 @@ pandoc: 2.0.5
 pkgdown: 1.0.0
 pkgdown_sha: d43ca38c74827d1d6babc3a80d48cd3a8e8fad8c
 articles:
+  Regression: articles/Regression.html
   parsnip_Intro: parsnip_Intro.html
 
