boosted trees via xgboost

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,21 +4,25 @@ S3method(fit,model_spec)
 S3method(predict,model_fit)
 S3method(predict_class,model_fit)
 S3method(predict_classprob,model_fit)
+S3method(print,boost_tree)
 S3method(print,linear_reg)
 S3method(print,logistic_reg)
 S3method(print,mlp)
 S3method(print,model_fit)
 S3method(print,rand_forest)
 S3method(print,surv_reg)
+S3method(translate,boost_tree)
 S3method(translate,default)
 S3method(translate,mlp)
 S3method(translate,rand_forest)
 S3method(translate,surv_reg)
+S3method(update,boost_tree)
 S3method(update,linear_reg)
 S3method(update,logistic_reg)
 S3method(update,mlp)
 S3method(update,rand_forest)
 S3method(update,surv_reg)
+export(boost_tree)
 export(fit)
 export(fit_control)
 export(keras_mlp)
@@ -34,6 +38,8 @@ export(rand_forest)
 export(surv_reg)
 export(translate)
 export(varying)
+export(xgb_pred)
+export(xgb_train)
 import(rlang)
 importFrom(dplyr,bind_cols)
 importFrom(purrr,list_modify)
