generic print method

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,7 @@ S3method(print,linear_reg)
 S3method(print,logistic_reg)
 S3method(print,mlp)
 S3method(print,model_fit)
+S3method(print,model_spec)
 S3method(print,rand_forest)
 S3method(print,surv_reg)
 S3method(translate,boost_tree)
