added C5.0 engine plus boosting test cases

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -23,6 +23,7 @@ S3method(update,logistic_reg)
 S3method(update,mlp)
 S3method(update,rand_forest)
 S3method(update,surv_reg)
+export(C5.0_train)
 export(boost_tree)
 export(fit)
 export(fit_control)
