--- a/NAMESPACE
+++ b/NAMESPACE
@@ -25,7 +25,7 @@ S3method(update,rand_forest)
 S3method(update,surv_reg)
 export(C5.0_train)
 export(boost_tree)
-export(fit)
+export(fit.model_spec)
 export(fit_control)
 export(keras_mlp)
 export(linear_reg)
@@ -44,6 +44,7 @@ export(xgb_pred)
 export(xgb_train)
 import(rlang)
 importFrom(dplyr,bind_cols)
+importFrom(modelgenerics,fit)
 importFrom(purrr,list_modify)
 importFrom(purrr,map_lgl)
 importFrom(stats,.checkMFClasses)
@@ -57,6 +58,7 @@ importFrom(stats,model.response)
 importFrom(stats,model.weights)
 importFrom(stats,na.omit)
 importFrom(stats,na.pass)
+importFrom(stats,predict)
 importFrom(stats,terms)
 importFrom(tibble,as_tibble)
 importFrom(tibble,is_tibble)
