--- a/NAMESPACE
+++ b/NAMESPACE
@@ -25,7 +25,7 @@ S3method(update,rand_forest)
 S3method(update,surv_reg)
 export(C5.0_train)
 export(boost_tree)
-export(fit.model_spec)
+export(fit)
 export(fit_control)
 export(keras_mlp)
 export(linear_reg)
