--- a/NAMESPACE
+++ b/NAMESPACE
@@ -26,6 +26,7 @@ S3method(update,surv_reg)
 export(C5.0_train)
 export(boost_tree)
 export(fit)
+export(fit.model_spec)
 export(fit_control)
 export(keras_mlp)
 export(linear_reg)
