first pass at `fit_xy` alternative

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -28,6 +28,7 @@ export(boost_tree)
 export(fit)
 export(fit.model_spec)
 export(fit_control)
+export(fit_xy)
 export(keras_mlp)
 export(linear_reg)
 export(logistic_reg)
