doc update with `fit_xy`

--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -19,7 +19,8 @@ reference:
     contents:
       - predict.model_fit
       - translate
-      - fit
+      - fit.model_spec
+      - fit_xy
       - fit_control
       - varying
       - descriptors
