--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -1,6 +1,9 @@
 template:
-  params:
-    bootswatch: united
+  package: tidytemplate
+  default_assets: false
+
+development:
+  mode: auto
 
 figures:
   fig.width: 8
@@ -17,6 +20,8 @@ reference:
       - surv_reg   
   - title: Infrastructure
     contents:
+      - model_spec
+      - model_fit
       - predict.model_fit
       - translate
       - fit.model_spec
@@ -39,7 +44,9 @@ navbar:
      - text: Classification modeling
        href: articles/articles/Classification.html    
      - text: Making a parsnip model from scratch
-       href: articles/articles/Scratch.html              
+       href: articles/articles/Scratch.html   
+  - text: News
+    href: news/index.html           
   - text: Reference
     href: reference/index.html
 
