--- a/NAMESPACE
+++ b/NAMESPACE
@@ -25,6 +25,7 @@ S3method(update,rand_forest)
 S3method(update,surv_reg)
 export(C5.0_train)
 export(boost_tree)
+export(check_empty_ellipse)
 export(fit)
 export(fit.model_spec)
 export(fit_control)
@@ -32,13 +33,16 @@ export(fit_xy)
 export(keras_mlp)
 export(linear_reg)
 export(logistic_reg)
+export(make_classes)
 export(mlp)
+export(model_printer)
 export(predict.model_fit)
 export(predict_class)
 export(predict_class.model_fit)
 export(predict_classprob)
 export(predict_classprob.model_fit)
 export(rand_forest)
+export(show_call)
 export(surv_reg)
 export(translate)
 export(varying)
