--- a/NAMESPACE
+++ b/NAMESPACE
@@ -41,6 +41,8 @@ export(predict_class)
 export(predict_class.model_fit)
 export(predict_classprob)
 export(predict_classprob.model_fit)
+export(predict_num)
+export(predict_num.model_fit)
 export(rand_forest)
 export(show_call)
 export(surv_reg)
@@ -50,6 +52,7 @@ export(xgb_pred)
 export(xgb_train)
 import(rlang)
 importFrom(dplyr,bind_cols)
+importFrom(glue,glue_collapse)
 importFrom(modelgenerics,fit)
 importFrom(purrr,list_modify)
 importFrom(purrr,map_lgl)
