--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ S3method(fit,model_spec)
 S3method(predict,model_fit)
 S3method(predict_class,model_fit)
 S3method(predict_classprob,model_fit)
+S3method(predict_num,model_fit)
 S3method(print,boost_tree)
 S3method(print,linear_reg)
 S3method(print,logistic_reg)
