--- a/NAMESPACE
+++ b/NAMESPACE
@@ -24,14 +24,13 @@ S3method(update,logistic_reg)
 S3method(update,mlp)
 S3method(update,rand_forest)
 S3method(update,surv_reg)
-export(C5.0_train)
+export("%>%")
 export(boost_tree)
 export(check_empty_ellipse)
 export(fit)
 export(fit.model_spec)
 export(fit_control)
 export(fit_xy)
-export(keras_mlp)
 export(linear_reg)
 export(logistic_reg)
 export(make_classes)
@@ -49,17 +48,17 @@ export(show_call)
 export(surv_reg)
 export(translate)
 export(varying)
-export(xgb_pred)
-export(xgb_train)
 import(rlang)
 importFrom(dplyr,bind_cols)
 importFrom(glue,glue_collapse)
+importFrom(magrittr,"%>%")
 importFrom(modelgenerics,fit)
 importFrom(purrr,list_modify)
 importFrom(purrr,map_lgl)
 importFrom(stats,.checkMFClasses)
 importFrom(stats,.getXlevels)
 importFrom(stats,as.formula)
+importFrom(stats,binomial)
 importFrom(stats,delete.response)
 importFrom(stats,model.frame)
 importFrom(stats,model.matrix)
@@ -75,4 +74,5 @@ importFrom(tibble,is_tibble)
 importFrom(tibble,tibble)
 importFrom(utils,capture.output)
 importFrom(utils,getFromNamespace)
+importFrom(utils,globalVariables)
 importFrom(utils,installed.packages)
