--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,7 @@ S3method(predict_num,model_fit)
 S3method(print,boost_tree)
 S3method(print,linear_reg)
 S3method(print,logistic_reg)
+S3method(print,mars)
 S3method(print,mlp)
 S3method(print,model_fit)
 S3method(print,model_spec)
@@ -15,12 +16,14 @@ S3method(print,rand_forest)
 S3method(print,surv_reg)
 S3method(translate,boost_tree)
 S3method(translate,default)
+S3method(translate,mars)
 S3method(translate,mlp)
 S3method(translate,rand_forest)
 S3method(translate,surv_reg)
 S3method(update,boost_tree)
 S3method(update,linear_reg)
 S3method(update,logistic_reg)
+S3method(update,mars)
 S3method(update,mlp)
 S3method(update,rand_forest)
 S3method(update,surv_reg)
@@ -34,6 +37,7 @@ export(fit_xy)
 export(linear_reg)
 export(logistic_reg)
 export(make_classes)
+export(mars)
 export(mlp)
 export(model_printer)
 export(predict.model_fit)
