framework for interval predictions for #41
`linear_reg()` only right now

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,7 +4,9 @@ S3method(fit,model_spec)
 S3method(predict,model_fit)
 S3method(predict_class,model_fit)
 S3method(predict_classprob,model_fit)
+S3method(predict_confint,model_fit)
 S3method(predict_num,model_fit)
+S3method(predict_predint,model_fit)
 S3method(print,boost_tree)
 S3method(print,linear_reg)
 S3method(print,logistic_reg)
@@ -45,8 +47,12 @@ export(predict_class)
 export(predict_class.model_fit)
 export(predict_classprob)
 export(predict_classprob.model_fit)
+export(predict_confint)
+export(predict_confint.model_fit)
 export(predict_num)
 export(predict_num.model_fit)
+export(predict_predint)
+export(predict_predint.model_fit)
 export(rand_forest)
 export(show_call)
 export(surv_reg)
@@ -72,6 +78,7 @@ importFrom(stats,model.weights)
 importFrom(stats,na.omit)
 importFrom(stats,na.pass)
 importFrom(stats,predict)
+importFrom(stats,quantile)
 importFrom(stats,terms)
 importFrom(tibble,as_tibble)
 importFrom(tibble,is_tibble)
