--- a/NAMESPACE
+++ b/NAMESPACE
@@ -64,6 +64,7 @@ importFrom(glue,glue_collapse)
 importFrom(magrittr,"%>%")
 importFrom(modelgenerics,fit)
 importFrom(purrr,list_modify)
+importFrom(purrr,map_dfr)
 importFrom(purrr,map_lgl)
 importFrom(stats,.checkMFClasses)
 importFrom(stats,.getXlevels)
@@ -80,6 +81,7 @@ importFrom(stats,na.pass)
 importFrom(stats,predict)
 importFrom(stats,quantile)
 importFrom(stats,terms)
+importFrom(stats,update)
 importFrom(tibble,as_tibble)
 importFrom(tibble,is_tibble)
 importFrom(tibble,tibble)
