--- a/NAMESPACE
+++ b/NAMESPACE
@@ -54,9 +54,9 @@ export(translate)
 export(varying)
 import(rlang)
 importFrom(dplyr,bind_cols)
+importFrom(generics,fit)
 importFrom(glue,glue_collapse)
 importFrom(magrittr,"%>%")
-importFrom(modelgenerics,fit)
 importFrom(purrr,list_modify)
 importFrom(purrr,map_lgl)
 importFrom(stats,.checkMFClasses)
