--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,7 @@ S3method(predict_classprob,model_fit)
 S3method(predict_confint,model_fit)
 S3method(predict_num,model_fit)
 S3method(predict_predint,model_fit)
+S3method(predict_raw,model_fit)
 S3method(print,boost_tree)
 S3method(print,linear_reg)
 S3method(print,logistic_reg)
@@ -53,6 +54,8 @@ export(predict_num)
 export(predict_num.model_fit)
 export(predict_predint)
 export(predict_predint.model_fit)
+export(predict_raw)
+export(predict_raw.model_fit)
 export(rand_forest)
 export(show_call)
 export(surv_reg)
