Z and t dist precentile imports

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -23,7 +23,8 @@ Imports:
     tibble,
     generics,
     glue,
-    magrittr
+    magrittr,
+    stats
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 6.1.0.9000
 Suggests: 
