--- a/NAMESPACE
+++ b/NAMESPACE
@@ -82,6 +82,8 @@ importFrom(stats,model.weights)
 importFrom(stats,na.omit)
 importFrom(stats,na.pass)
 importFrom(stats,predict)
+importFrom(stats,qnorm)
+importFrom(stats,qt)
 importFrom(stats,quantile)
 importFrom(stats,terms)
 importFrom(stats,update)
