Added another pkgdown page listing models

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -94,3 +94,4 @@ importFrom(utils,capture.output)
 importFrom(utils,getFromNamespace)
 importFrom(utils,globalVariables)
 importFrom(utils,installed.packages)
+importFrom(utils,stack)
