--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,7 @@
 
 S3method(fit,model_spec)
 S3method(multi_predict,"_C5.0")
+S3method(multi_predict,"_earth")
 S3method(multi_predict,"_elnet")
 S3method(multi_predict,"_lognet")
 S3method(multi_predict,"_xgb.Booster")
@@ -76,6 +77,7 @@ importFrom(generics,fit)
 importFrom(glue,glue_collapse)
 importFrom(magrittr,"%>%")
 importFrom(purrr,list_modify)
+importFrom(purrr,map_df)
 importFrom(purrr,map_dfr)
 importFrom(purrr,map_lgl)
 importFrom(stats,.checkMFClasses)
