--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,8 +5,10 @@ S3method(multi_predict,"_C5.0")
 S3method(multi_predict,"_earth")
 S3method(multi_predict,"_elnet")
 S3method(multi_predict,"_lognet")
+S3method(multi_predict,"_multnet")
 S3method(multi_predict,"_xgb.Booster")
 S3method(multi_predict,default)
+S3method(predict,"_multnet")
 S3method(predict,model_fit)
 S3method(predict_class,model_fit)
 S3method(predict_classprob,model_fit)
@@ -21,6 +23,7 @@ S3method(print,mars)
 S3method(print,mlp)
 S3method(print,model_fit)
 S3method(print,model_spec)
+S3method(print,multinom_reg)
 S3method(print,rand_forest)
 S3method(print,surv_reg)
 S3method(translate,boost_tree)
@@ -34,6 +37,7 @@ S3method(update,linear_reg)
 S3method(update,logistic_reg)
 S3method(update,mars)
 S3method(update,mlp)
+S3method(update,multinom_reg)
 S3method(update,rand_forest)
 S3method(update,surv_reg)
 export("%>%")
@@ -50,6 +54,7 @@ export(mars)
 export(mlp)
 export(model_printer)
 export(multi_predict)
+export(multinom_reg)
 export(predict.model_fit)
 export(predict_class)
 export(predict_class.model_fit)
