spark linear regression code

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -78,6 +78,8 @@ importFrom(dplyr,arrange)
 importFrom(dplyr,as_tibble)
 importFrom(dplyr,bind_cols)
 importFrom(dplyr,full_join)
+importFrom(dplyr,rename)
+importFrom(dplyr,select)
 importFrom(generics,fit)
 importFrom(glue,glue_collapse)
 importFrom(magrittr,"%>%")
