--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -18,7 +18,8 @@ reference:
       - linear_reg
       - logistic_reg
       - mars
-      - mlp   
+      - mlp  
+      - multinom_reg 
       - rand_forest
       - surv_reg   
   - title: Infrastructure
