random forest spark class and probability predictions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -78,8 +78,12 @@ importFrom(dplyr,arrange)
 importFrom(dplyr,as_tibble)
 importFrom(dplyr,bind_cols)
 importFrom(dplyr,full_join)
+importFrom(dplyr,funs)
 importFrom(dplyr,rename)
+importFrom(dplyr,rename_at)
 importFrom(dplyr,select)
+importFrom(dplyr,starts_with)
+importFrom(dplyr,vars)
 importFrom(generics,fit)
 importFrom(glue,glue_collapse)
 importFrom(magrittr,"%>%")
