--- a/NAMESPACE
+++ b/NAMESPACE
@@ -41,6 +41,9 @@ S3method(update,mlp)
 S3method(update,multinom_reg)
 S3method(update,rand_forest)
 S3method(update,surv_reg)
+S3method(varying_args,model_spec)
+S3method(varying_args,recipe)
+S3method(varying_args,step)
 export("%>%")
 export(boost_tree)
 export(check_empty_ellipse)
@@ -75,6 +78,10 @@ export(show_call)
 export(surv_reg)
 export(translate)
 export(varying)
+export(varying_args)
+export(varying_args.model_spec)
+export(varying_args.recipe)
+export(varying_args.step)
 import(rlang)
 importFrom(dplyr,arrange)
 importFrom(dplyr,as_tibble)
@@ -99,6 +106,8 @@ importFrom(purrr,imap)
 importFrom(purrr,imap_lgl)
 importFrom(purrr,list_modify)
 importFrom(purrr,map)
+importFrom(purrr,map2_dfr)
+importFrom(purrr,map_chr)
 importFrom(purrr,map_dbl)
 importFrom(purrr,map_df)
 importFrom(purrr,map_dfr)
