First pass at k-nearest neighbors with kknn

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -25,6 +25,7 @@ S3method(print,mlp)
 S3method(print,model_fit)
 S3method(print,model_spec)
 S3method(print,multinom_reg)
+S3method(print,nearest_neighbor)
 S3method(print,rand_forest)
 S3method(print,surv_reg)
 S3method(translate,boost_tree)
@@ -39,6 +40,7 @@ S3method(update,logistic_reg)
 S3method(update,mars)
 S3method(update,mlp)
 S3method(update,multinom_reg)
+S3method(update,nearest_neighbor)
 S3method(update,rand_forest)
 S3method(update,surv_reg)
 export("%>%")
@@ -57,6 +59,7 @@ export(mlp)
 export(model_printer)
 export(multi_predict)
 export(multinom_reg)
+export(nearest_neighbor)
 export(predict.model_fit)
 export(predict_class)
 export(predict_class.model_fit)
