added type_sum for better printing

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -33,6 +33,8 @@ S3method(translate,mars)
 S3method(translate,mlp)
 S3method(translate,rand_forest)
 S3method(translate,surv_reg)
+S3method(type_sum,model_fit)
+S3method(type_sum,model_spec)
 S3method(update,boost_tree)
 S3method(update,linear_reg)
 S3method(update,logistic_reg)
@@ -101,6 +103,7 @@ importFrom(dplyr,vars)
 importFrom(generics,fit)
 importFrom(glue,glue_collapse)
 importFrom(magrittr,"%>%")
+importFrom(pillar,type_sum)
 importFrom(purrr,as_vector)
 importFrom(purrr,imap)
 importFrom(purrr,imap_lgl)
