fixed type_sum args

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -103,7 +103,6 @@ importFrom(dplyr,vars)
 importFrom(generics,fit)
 importFrom(glue,glue_collapse)
 importFrom(magrittr,"%>%")
-importFrom(pillar,type_sum)
 importFrom(purrr,as_vector)
 importFrom(purrr,imap)
 importFrom(purrr,imap_lgl)
@@ -138,6 +137,7 @@ importFrom(stats,update)
 importFrom(tibble,as_tibble)
 importFrom(tibble,is_tibble)
 importFrom(tibble,tibble)
+importFrom(tibble,type_sum)
 importFrom(tidyr,gather)
 importFrom(utils,capture.output)
 importFrom(utils,getFromNamespace)
