Prediction tests in test_linear_reg passing

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,21 +2,10 @@
 
 S3method(fit,model_spec)
 S3method(fit_xy,model_spec)
-S3method(multi_predict,"_C5.0")
 S3method(multi_predict,"_earth")
-S3method(multi_predict,"_elnet")
-S3method(multi_predict,"_lognet")
 S3method(multi_predict,"_multnet")
-S3method(multi_predict,"_xgb.Booster")
-S3method(multi_predict,default)
 S3method(predict,"_multnet")
 S3method(predict,model_fit)
-S3method(predict_class,model_fit)
-S3method(predict_classprob,model_fit)
-S3method(predict_confint,model_fit)
-S3method(predict_num,model_fit)
-S3method(predict_predint,model_fit)
-S3method(predict_raw,model_fit)
 S3method(print,boost_tree)
 S3method(print,linear_reg)
 S3method(print,logistic_reg)
@@ -58,18 +47,6 @@ export(model_printer)
 export(multi_predict)
 export(multinom_reg)
 export(predict.model_fit)
-export(predict_class)
-export(predict_class.model_fit)
-export(predict_classprob)
-export(predict_classprob.model_fit)
-export(predict_confint)
-export(predict_confint.model_fit)
-export(predict_num)
-export(predict_num.model_fit)
-export(predict_predint)
-export(predict_predint.model_fit)
-export(predict_raw)
-export(predict_raw.model_fit)
 export(rand_forest)
 export(show_call)
 export(surv_reg)
@@ -81,16 +58,11 @@ importFrom(dplyr,as_tibble)
 importFrom(dplyr,bind_cols)
 importFrom(dplyr,collect)
 importFrom(dplyr,full_join)
-importFrom(dplyr,funs)
 importFrom(dplyr,group_by)
 importFrom(dplyr,pull)
-importFrom(dplyr,rename)
-importFrom(dplyr,rename_at)
 importFrom(dplyr,select)
-importFrom(dplyr,starts_with)
 importFrom(dplyr,summarise)
 importFrom(dplyr,tally)
-importFrom(dplyr,vars)
 importFrom(generics,fit)
 importFrom(glue,glue_collapse)
 importFrom(magrittr,"%>%")
@@ -105,10 +77,11 @@ importFrom(purrr,map_dfr)
 importFrom(purrr,map_lgl)
 importFrom(rlang,sym)
 importFrom(rlang,syms)
+importFrom(safepredict,multi_predict)
+importFrom(safepredict,safe_predict)
 importFrom(stats,.checkMFClasses)
 importFrom(stats,.getXlevels)
 importFrom(stats,as.formula)
-importFrom(stats,binomial)
 importFrom(stats,delete.response)
 importFrom(stats,model.frame)
 importFrom(stats,model.matrix)
@@ -117,14 +90,9 @@ importFrom(stats,model.response)
 importFrom(stats,model.weights)
 importFrom(stats,na.omit)
 importFrom(stats,na.pass)
-importFrom(stats,predict)
-importFrom(stats,qnorm)
-importFrom(stats,qt)
-importFrom(stats,quantile)
 importFrom(stats,terms)
 importFrom(stats,update)
 importFrom(tibble,as_tibble)
-importFrom(tibble,is_tibble)
 importFrom(tibble,tibble)
 importFrom(tidyr,gather)
 importFrom(utils,capture.output)
