--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -20,6 +20,7 @@ reference:
       - mars
       - mlp  
       - multinom_reg 
+      - nearest_neighbor
       - rand_forest
       - surv_reg   
   - title: Infrastructure
