--- a/NAMESPACE
+++ b/NAMESPACE
@@ -104,6 +104,7 @@ importFrom(dplyr,summarise)
 importFrom(dplyr,tally)
 importFrom(dplyr,vars)
 importFrom(generics,fit)
+importFrom(generics,fit_xy)
 importFrom(glue,glue_collapse)
 importFrom(magrittr,"%>%")
 importFrom(purrr,as_vector)
