added pipe-able functions for setting elements

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -79,6 +79,8 @@ export(predict_predint.model_fit)
 export(predict_raw)
 export(predict_raw.model_fit)
 export(rand_forest)
+export(set_args)
+export(set_mode)
 export(show_call)
 export(surv_reg)
 export(translate)
