--- a/NAMESPACE
+++ b/NAMESPACE
@@ -51,11 +51,15 @@ S3method(varying_args,step)
 export("%>%")
 export(boost_tree)
 export(check_empty_ellipse)
+export(cols)
+export(dat)
+export(facts)
 export(fit)
 export(fit.model_spec)
 export(fit_control)
 export(fit_xy)
 export(fit_xy.model_spec)
+export(levs)
 export(linear_reg)
 export(logistic_reg)
 export(make_classes)
@@ -65,6 +69,7 @@ export(model_printer)
 export(multi_predict)
 export(multinom_reg)
 export(nearest_neighbor)
+export(obs)
 export(predict.model_fit)
 export(predict_class)
 export(predict_class.model_fit)
@@ -78,6 +83,7 @@ export(predict_predint)
 export(predict_predint.model_fit)
 export(predict_raw)
 export(predict_raw.model_fit)
+export(preds)
 export(rand_forest)
 export(set_args)
 export(set_mode)
@@ -89,6 +95,8 @@ export(varying_args)
 export(varying_args.model_spec)
 export(varying_args.recipe)
 export(varying_args.step)
+export(x)
+export(y)
 import(rlang)
 importFrom(dplyr,arrange)
 importFrom(dplyr,as_tibble)
