--- a/NAMESPACE
+++ b/NAMESPACE
@@ -49,6 +49,14 @@ S3method(varying_args,model_spec)
 S3method(varying_args,recipe)
 S3method(varying_args,step)
 export("%>%")
+export(.dat)
+export(.n_cols)
+export(.n_facts)
+export(.n_levs)
+export(.n_obs)
+export(.n_preds)
+export(.x)
+export(.y)
 export(boost_tree)
 export(check_empty_ellipse)
 export(fit)
