Export custom training helpers

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -57,6 +57,7 @@ export(.n_obs)
 export(.n_preds)
 export(.x)
 export(.y)
+export(C5.0_train)
 export(boost_tree)
 export(check_empty_ellipse)
 export(fit)
@@ -64,6 +65,7 @@ export(fit.model_spec)
 export(fit_control)
 export(fit_xy)
 export(fit_xy.model_spec)
+export(keras_mlp)
 export(linear_reg)
 export(logistic_reg)
 export(make_classes)
@@ -97,6 +99,7 @@ export(varying_args)
 export(varying_args.model_spec)
 export(varying_args.recipe)
 export(varying_args.step)
+export(xgb_train)
 import(rlang)
 importFrom(dplyr,arrange)
 importFrom(dplyr,as_tibble)
