descriptor name changes

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -58,12 +58,12 @@ S3method(varying_args,model_spec)
 S3method(varying_args,recipe)
 S3method(varying_args,step)
 export("%>%")
+export(.cols)
 export(.dat)
-export(.n_cols)
-export(.n_facts)
-export(.n_levs)
-export(.n_obs)
-export(.n_preds)
+export(.facts)
+export(.lvls)
+export(.obs)
+export(.preds)
 export(.x)
 export(.y)
 export(C5.0_train)
