--- a/.travis.yml
+++ b/.travis.yml
@@ -17,6 +17,11 @@ r:
 env:
   - KERAS_BACKEND="tensorflow"
 
+# until we troubleshoot these issues
+matrix:
+  allow_failures:
+    - r: 3.1
+    - r: 3.2
 
 r_binary_packages: 
  - rstan
