take 2 on make -j 2

--- a/.travis.yml
+++ b/.travis.yml
@@ -15,7 +15,9 @@ r:
 - devel
 
 env:
+  global:
   - KERAS_BACKEND="tensorflow"
+  - MAKEFLAGS="-j 2"
 
 # until we troubleshoot these issues
 matrix:
