initial svm model code

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -38,12 +38,14 @@ S3method(print,multinom_reg)
 S3method(print,nearest_neighbor)
 S3method(print,rand_forest)
 S3method(print,surv_reg)
+S3method(print,svm_poly)
 S3method(translate,boost_tree)
 S3method(translate,default)
 S3method(translate,mars)
 S3method(translate,mlp)
 S3method(translate,rand_forest)
 S3method(translate,surv_reg)
+S3method(translate,svm_poly)
 S3method(type_sum,model_fit)
 S3method(type_sum,model_spec)
 S3method(update,boost_tree)
@@ -55,6 +57,7 @@ S3method(update,multinom_reg)
 S3method(update,nearest_neighbor)
 S3method(update,rand_forest)
 S3method(update,surv_reg)
+S3method(update,svm_poly)
 S3method(varying_args,model_spec)
 S3method(varying_args,recipe)
 S3method(varying_args,step)
@@ -105,6 +108,7 @@ export(set_args)
 export(set_mode)
 export(show_call)
 export(surv_reg)
+export(svm_poly)
 export(translate)
 export(varying)
 export(varying_args)
