--- a/NAMESPACE
+++ b/NAMESPACE
@@ -102,6 +102,7 @@ export(predict_raw)
 export(predict_raw.model_fit)
 export(rand_forest)
 export(set_args)
+export(set_engine)
 export(set_mode)
 export(show_call)
 export(surv_reg)
