num -> numeric, prob -> classprob for #65

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -19,8 +19,8 @@ S3method(predict_classprob,"_lognet")
 S3method(predict_classprob,"_multnet")
 S3method(predict_classprob,model_fit)
 S3method(predict_confint,model_fit)
-S3method(predict_num,"_elnet")
-S3method(predict_num,model_fit)
+S3method(predict_numeric,"_elnet")
+S3method(predict_numeric,model_fit)
 S3method(predict_predint,model_fit)
 S3method(predict_quantile,model_fit)
 S3method(predict_raw,"_elnet")
@@ -92,8 +92,8 @@ export(predict_classprob)
 export(predict_classprob.model_fit)
 export(predict_confint)
 export(predict_confint.model_fit)
-export(predict_num)
-export(predict_num.model_fit)
+export(predict_numeric)
+export(predict_numeric.model_fit)
 export(predict_predint)
 export(predict_predint.model_fit)
 export(predict_quantile)
