decision tree code

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -28,6 +28,7 @@ S3method(predict_raw,"_lognet")
 S3method(predict_raw,"_multnet")
 S3method(predict_raw,model_fit)
 S3method(print,boost_tree)
+S3method(print,decision_tree)
 S3method(print,linear_reg)
 S3method(print,logistic_reg)
 S3method(print,mars)
@@ -41,6 +42,7 @@ S3method(print,surv_reg)
 S3method(print,svm_poly)
 S3method(print,svm_rbf)
 S3method(translate,boost_tree)
+S3method(translate,decision_tree)
 S3method(translate,default)
 S3method(translate,mars)
 S3method(translate,mlp)
@@ -51,6 +53,7 @@ S3method(translate,svm_rbf)
 S3method(type_sum,model_fit)
 S3method(type_sum,model_spec)
 S3method(update,boost_tree)
+S3method(update,decision_tree)
 S3method(update,linear_reg)
 S3method(update,logistic_reg)
 S3method(update,mars)
@@ -76,6 +79,7 @@ export(.y)
 export(C5.0_train)
 export(boost_tree)
 export(check_empty_ellipse)
+export(decision_tree)
 export(fit)
 export(fit.model_spec)
 export(fit_control)
@@ -107,6 +111,7 @@ export(predict_quantile.model_fit)
 export(predict_raw)
 export(predict_raw.model_fit)
 export(rand_forest)
+export(rpart_train)
 export(set_args)
 export(set_engine)
 export(set_mode)
