avoiding "Possibly mis-spelled words in DESCRIPTION", r-hub suggestions and doc update

--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -18,6 +18,7 @@ reference:
   - title: Models
     contents:
       - boost_tree
+      - decision_tree
       - linear_reg
       - logistic_reg
       - mars
