--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,10 +9,12 @@ S3method(multi_predict,"_lognet")
 S3method(multi_predict,"_multnet")
 S3method(multi_predict,"_xgb.Booster")
 S3method(multi_predict,default)
+S3method(null_model,default)
 S3method(predict,"_elnet")
 S3method(predict,"_lognet")
 S3method(predict,"_multnet")
 S3method(predict,model_fit)
+S3method(predict,null_model)
 S3method(predict_class,"_lognet")
 S3method(predict_class,model_fit)
 S3method(predict_classprob,"_lognet")
@@ -37,6 +39,7 @@ S3method(print,model_fit)
 S3method(print,model_spec)
 S3method(print,multinom_reg)
 S3method(print,nearest_neighbor)
+S3method(print,null_model)
 S3method(print,rand_forest)
 S3method(print,surv_reg)
 S3method(print,svm_poly)
@@ -95,6 +98,8 @@ export(model_printer)
 export(multi_predict)
 export(multinom_reg)
 export(nearest_neighbor)
+export(null_model)
+export(nullmodel)
 export(predict.model_fit)
 export(predict_class)
 export(predict_class.model_fit)
