name change nullmodel -> null_model

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,12 +9,12 @@ S3method(multi_predict,"_lognet")
 S3method(multi_predict,"_multnet")
 S3method(multi_predict,"_xgb.Booster")
 S3method(multi_predict,default)
-S3method(null_model,default)
+S3method(nullmodel,default)
 S3method(predict,"_elnet")
 S3method(predict,"_lognet")
 S3method(predict,"_multnet")
 S3method(predict,model_fit)
-S3method(predict,null_model)
+S3method(predict,nullmodel)
 S3method(predict_class,"_lognet")
 S3method(predict_class,model_fit)
 S3method(predict_classprob,"_lognet")
@@ -39,7 +39,7 @@ S3method(print,model_fit)
 S3method(print,model_spec)
 S3method(print,multinom_reg)
 S3method(print,nearest_neighbor)
-S3method(print,null_model)
+S3method(print,nullmodel)
 S3method(print,rand_forest)
 S3method(print,surv_reg)
 S3method(print,svm_poly)
