Use generics::varying_args()

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -122,9 +122,6 @@ export(svm_rbf)
 export(translate)
 export(varying)
 export(varying_args)
-export(varying_args.model_spec)
-export(varying_args.recipe)
-export(varying_args.step)
 export(xgb_train)
 import(rlang)
 importFrom(dplyr,arrange)
@@ -146,6 +143,7 @@ importFrom(dplyr,tally)
 importFrom(dplyr,vars)
 importFrom(generics,fit)
 importFrom(generics,fit_xy)
+importFrom(generics,varying_args)
 importFrom(glue,glue_collapse)
 importFrom(magrittr,"%>%")
 importFrom(purrr,as_vector)
