more specific imports for #141

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -129,7 +129,6 @@ export(translate)
 export(varying)
 export(varying_args)
 export(xgb_train)
-import(rlang)
 importFrom(dplyr,arrange)
 importFrom(dplyr,as_tibble)
 importFrom(dplyr,bind_cols)
@@ -163,7 +162,25 @@ importFrom(purrr,map_dbl)
 importFrom(purrr,map_df)
 importFrom(purrr,map_dfr)
 importFrom(purrr,map_lgl)
+importFrom(rlang,abort)
+importFrom(rlang,call2)
+importFrom(rlang,caller_env)
+importFrom(rlang,current_env)
+importFrom(rlang,enquo)
+importFrom(rlang,enquos)
 importFrom(rlang,eval_tidy)
+importFrom(rlang,expr)
+importFrom(rlang,get_expr)
+importFrom(rlang,is_empty)
+importFrom(rlang,is_missing)
+importFrom(rlang,is_null)
+importFrom(rlang,is_quosure)
+importFrom(rlang,is_symbolic)
+importFrom(rlang,lgl)
+importFrom(rlang,ll)
+importFrom(rlang,missing_arg)
+importFrom(rlang,quo_get_expr)
+importFrom(rlang,quos)
 importFrom(rlang,sym)
 importFrom(rlang,syms)
 importFrom(stats,.checkMFClasses)
