fixed control object printing

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -32,6 +32,7 @@ S3method(predict_raw,"_multnet")
 S3method(predict_raw,model_fit)
 S3method(print,boost_tree)
 S3method(print,decision_tree)
+S3method(print,fit_control)
 S3method(print,linear_reg)
 S3method(print,logistic_reg)
 S3method(print,mars)
